--- a/html-class-01/index.html
+++ b/html-class-01/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: red; font-weight: 400;">Chaicode</h1>
+    <h1 style="color: red; font-weight: 400; font-family: tahoma;">ChaiCode</h1>
+
+    <button style="background-color: grey; border: 0px; font-weight: 600; border-radius: 10px;">Click Me</button>
+
     <button style="background-color: grey; border: 0px; font-weight: 600; border-radius: 10px;">Click Me</button>
 </body>
 </html>
