--- a/html-class-01/index.html
+++ b/html-class-01/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<style>
+<!-- <style>
     h1{
         color: red;
         font-weight: bolder;
         text-decoration: underline;
-    }
+    } 
     button{
         background-color: green;
     }
-</style>
+</style> -->
 <body>
     <h1>ChaiCode</h1>
     <button>Click Me</button>
