specificity in css

--- a/html-class-01/index.html
+++ b/html-class-01/index.html
@@ -18,8 +18,8 @@
 </style> -->
 <body>
     <h1>ChaiCode</h1>
-    <button>Click Me</button>
-    <button>Click Me</button>
+    <button>Click Me 1</button>
+    <button>Click Me 2</button>
     <h1>Harsh</h1>
 </body>
 </html>
