Restructured HTML Resume Assignment and added my personal details

--- a/assignments/resume-website/index.html
+++ b/assignments/resume-website/index.html
@@ -3,71 +3,76 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML Resume Page Assignment</title>
+    <title>Harsh Guleria | Resume</title>
   </head>
   <body>
     <!-- Header Section -->
     <header>
-      <h1>John Doe</h1>
-      <p>Full Stack Developer | Web Designer | Tech Enthusiast</p>
-      <hr />
+      <h1>Harsh Guleria</h1>
+      <p>
+        MERN Stack Developer | Ex-Intern @ IIT Mandi | Open to Software
+        Engineering Internships
+      </p>
     </header>
+
+    <hr />
 
     <main>
       <!-- About Section -->
       <section>
         <h2>About Me</h2>
+
         <p>
-          I am a passionate developer with 5+ years of experience in building
-          web applications. I specialize in HTML, CSS, JavaScript, and backend
-          technologies.
+          I am a B.Tech Computer Science student passionate about full-stack
+          development, problem-solving, and building scalable web applications.
+          I enjoy learning modern technologies and applying them to real-world
+          projects.
         </p>
       </section>
+
       <hr />
 
       <!-- Skills Section -->
       <section>
         <h2>Skills</h2>
+
         <ul>
           <li>HTML5 & CSS3</li>
           <li>JavaScript</li>
-          <li>React & Vue.js</li>
+          <li>React</li>
           <li>Node.js & Express</li>
           <li>MongoDB & MySQL</li>
           <li>Git & GitHub</li>
         </ul>
       </section>
+
       <hr />
 
       <!-- Experience Section -->
       <section>
         <h2>Experience</h2>
+
         <table border="black">
-          <tr>
-            <th>Position</th>
-            <th>Company</th>
-            <th>Duration</th>
-          </tr>
+          <thead>
+            <tr>
+              <th>Role</th>
+              <th>Organization</th>
+              <th>Duration</th>
+              <th>Location</th>
+            </tr>
+          </thead>
 
-          <tr>
-            <td>Senior Developer</td>
-            <td>Tech Solutions Inc.</td>
-            <td>2021 - Present</td>
-          </tr>
-
-          <tr>
-            <td>Web Developer</td>
-            <td>Digital Innovations</td>
-            <td>2019 - 2021</td>
-          </tr>
-
-          <tr>
-            <td>Junior Developer</td>
-            <td>StartUp Co.</td>
-            <td>2018 - 2019</td>
-          </tr>
+          <tbody>
+            <tr>
+              <td>Research Intern</td>
+              <td>Indian Institute of Technology (IIT) Mandi</td>
+              <td>Jan 2025 – Feb 2025</td>
+              <td>Mandi, Himachal Pradesh, India</td>
+            </tr>
+          </tbody>
         </table>
       </section>
+
       <hr />
 
       <!-- Projects Section -->
@@ -75,52 +80,62 @@
         <h2>Projects</h2>
 
         <article>
-          <h3>Project 1: E-Commerce Website</h3>
+          <h3>Project 1: Promptora (AI Chat App)</h3>
           <p>
-            Built a fully functional e-commerce platform with product listings,
-            cart management, and payment integration.
+            A GPT-inspired AI chat application built to understand prompts and
+            respond intelligently.
           </p>
           <ul>
-            <li>Technologies: React, Node.js, MongoDB</li>
-            <li>Timeline: 6 months</li>
+            <li>Built using HTML, CSS, JavaScript, React, Node.js, Express</li>
+            <li>Integrated GPT APIs for AI-based conversations</li>
+            <li>Includes chat history and responsive UI</li>
           </ul>
         </article>
 
         <article>
-          <h3>Project 2: Blog Platform</h3>
+          <h3>Project 2: Wanderlust (Hotel Listing Platform)</h3>
           <p>
-            Developed a blogging platform with user authentication and content
-            management features.
+            A full-stack web platform to explore and list hotels from different
+            cities.
           </p>
           <ul>
-            <li>Technologies: HTML, CSS, JavaScript, Express</li>
-            <li>Timeline: 3 months</li>
+            <li>Frontend developed with HTML, CSS, JavaScript, Bootstrap</li>
+            <li>Backend powered by Node.js, Express, MongoDB</li>
+            <li>Implemented MVC architecture and REST APIs</li>
           </ul>
         </article>
       </section>
+
       <hr />
 
       <!-- Education Section -->
       <section>
         <h2>Education</h2>
+
         <table border="black">
-          <tr>
-            <th>Degree</th>
-            <th>Institution</th>
-            <th>Year</th>
-          </tr>
-          <tr>
-            <td>Bachelor in Computer Science</td>
-            <td>State University</td>
-            <td>2018</td>
-          </tr>
-          <tr>
-            <td>Web Development Bootcamp</td>
-            <td>Online Academy</td>
-            <td>2017</td>
-          </tr>
+          <thead>
+            <tr>
+              <th>Degree</th>
+              <th>Institution</th>
+              <th>Year</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>B.Tech in Computer Science Engineering</td>
+              <td>University Institute of Technology, Shimla</td>
+              <td>2023 – 2027</td>
+            </tr>
+            <tr>
+              <td>XII (CBSE)</td>
+              <td>Him Academy Public School, Hamirpur</td>
+              <td>2022 – 2023</td>
+            </tr>
+          </tbody>
         </table>
       </section>
+
       <hr />
 
       <!-- Contact Section -->
@@ -128,17 +143,18 @@
         <h2>Contact</h2>
 
         <address>
-          <p>Email: john.doe@example.com</p>
-          <p>Phone: +1 (555) 123-4567</p>
-          <p>Location: New York, USA</p>
+          <p><strong>Email:</strong> forgewithharsh@gmail.com</p>
+          <p><strong>Phone:</strong> +1 (555) 123-4567</p>
+          <p><strong>Location:</strong> Shimla, Himachal Pradesh</p>
         </address>
       </section>
-      <hr />
     </main>
+
+    <hr />
 
     <!-- Footer Section -->
     <footer>
-      <p>&copy; 2024 John Doe. All rights reserved.</p>
+      <p>&copy; 2026 Harsh Guleria. All rights reserved.</p>
     </footer>
   </body>
 </html>
