--- a/t-class/t-2/index.html
+++ b/t-class/t-2/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/style.css" />
     <title>5 Feb 2026</title>
   </head>
-  <body class="bg-[#131313]">
+  <body class="bg-neutral-950">
     <h1 class="text-7xl font-bold underline text-white">Hello world!</h1>
   </body>
 </html>
